fix visible

--- a/src/components/balance/Balance.css
+++ b/src/components/balance/Balance.css
@@ -8,7 +8,7 @@
     font-size: 20px;
     text-align: center;
     line-height: 23px;
-    margin-top: 80px;
+    padding-top: 24px;
 }
 
 .balance__info {
