--- a/src/components/emisionbar/Emixionbar.css
+++ b/src/components/emisionbar/Emixionbar.css
@@ -5,7 +5,7 @@
     height: 44px;
     display: flex;
 
-    margin: 32px 0 32px 0;
+    margin: 83px 0 54px 0;
 }
 
 .emisionbar__developers {
