--- a/src/components/energyinfo/Energyinfo.css
+++ b/src/components/energyinfo/Energyinfo.css
@@ -3,7 +3,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 72px;
+    margin-top: 45px;
 }
 
 .energyinfo__bar {
