--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,22 @@ button {
     background: transparent;
 }
 
+.content {
+    background: linear-gradient(0deg, rgba(19, 19, 19, 0.39), rgba(19, 19, 19, 0.39)),
+    linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
+    backdrop-filter: blur(11.4px);
+    width: 100%;
+    max-height: 506px;
+    border-radius: 18px;
+}
+
+.projectname {
+    margin: 140px 0 18px 0;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 body {
     background-color: black;
     background-repeat: no-repeat;
